# ChicOS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  License  Makefile  README.md  cmake_install.cmake
.cache/clangd/index/: defines.h.BE68302F32E655EB.idx  main.c.DBA7C12114A61741.idx  main.h.D778352F7263DD15.idx  process.c.00F92CAFE964D745.idx  process.h.09824D0DCE3F088B.idx  test.c.E997BDBEA919FE54.idx
.github/workflows/: cmake-single-platform.yml
docs/: git.md  log.md
resources/: sint1  sint2  sint3  sint4  sint5  synthetic-program.txt
resources/data/: .gitignore  .us  a			.us  admin.us  name1.us  user.us  username.us
src/: chicos.c  chicos.h  defines.h  main.c  main.h
src/modules/cpu/: cpu.c  cpu.h
src/modules/fs/: fs.c  fs.h  synt.c  synt.h
src/modules/io/: disk.c  disk.h  file.c  file.h  printer.c  printer.h
src/modules/log/: log.c  log.h
src/modules/memory/: arena.c  arena.h  mem.c  mem.h
src/modules/process/: process.c  process.h
src/modules/render/: render.c  render.h
src/modules/schedduler/: schedduler.c  schedduler.h  scheduler.c  scheduler.h
src/modules/scheduler/: scheduler.c  scheduler.h
src/modules/semaphore/: semaphore.c  semaphore.h
src/modules/user/: user.c  user.h
src/modules/utils/: list.c  list.h  utils.c  utils.h
test/: memory_test.c
